src/parser/snapshots/almond__parser__statement__tests__if_stmt-5.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"if (x) 1\\nelse 2\".into()).unwrap().1"
---
{
  "type": "IfStatement",
  "test": {
    "type": "Identifier",
    "name": "x",
    "start": 4,
    "end": 5
  },
  "consequent": {
    "type": "ExpressionStatement",
    "expression": {
      "type": "Literal",
      "value": 1.0,
      "start": 7,
      "end": 8
    },
    "start": 7,
    "end": 8
  },
  "alternate": {
    "type": "ExpressionStatement",
    "expression": {
      "type": "Literal",
      "value": 2.0,
      "start": 14,
      "end": 15
    },
    "start": 14,
    "end": 15
  },
  "start": 0,
  "end": 15
}
