src/parser/snapshots/almond__parser__statement__tests__labeled_stmt-2.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"label: stmt\".into()).unwrap().1"
---
{
  "type": "LabeledStatement",
  "label": {
    "type": "Identifier",
    "name": "label",
    "start": 0,
    "end": 5
  },
  "body": {
    "type": "ExpressionStatement",
    "expression": {
      "type": "Identifier",
      "name": "stmt",
      "start": 7,
      "end": 11
    },
    "start": 7,
    "end": 11
  },
  "start": 0,
  "end": 11
}
