src/parser/snapshots/almond__parser__statement__tests__labeled_stmt-4.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"label: {\n                    stmt;\n                }\".into()).unwrap().1"
---
{
  "type": "LabeledStatement",
  "label": {
    "type": "Identifier",
    "name": "label",
    "start": 0,
    "end": 5
  },
  "body": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Identifier",
          "name": "stmt",
          "start": 29,
          "end": 33
        },
        "start": 29,
        "end": 34
      }
    ],
    "start": 7,
    "end": 52
  },
  "start": 0,
  "end": 52
}
