src/parser/snapshots/almond__parser__statement__tests__return_stmt-3.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"return\\na;\".into()).unwrap().1"
---
{
  "type": "ReturnStatement",
  "argument": null,
  "start": 0,
  "end": 6
}
