src/parser/snapshots/almond__parser__statement__tests__return_stmt.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"return;\".into()).unwrap().1"
---
{
  "type": "ReturnStatement",
  "argument": null,
  "start": 0,
  "end": 7
}
