src/parser/snapshots/almond__parser__statement__tests__throw_stmt-2.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"throw 3;\".into()).unwrap().1"
---
{
  "type": "ThrowStatement",
  "argument": {
    "type": "Literal",
    "value": 3.0,
    "start": 6,
    "end": 7
  },
  "start": 0,
  "end": 8
}
