src/parser/snapshots/almond__parser__statement__tests__throw_stmt.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"throw true;\".into()).unwrap().1"
---
{
  "type": "ThrowStatement",
  "argument": {
    "type": "Literal",
    "value": true,
    "start": 6,
    "end": 10
  },
  "start": 0,
  "end": 11
}
