src/parser/snapshots/almond__parser__statement__tests__var_stmt-2.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"var x, y = 1;\".into()).unwrap().1"
---
{
  "type": "VariableDeclaration",
  "declarations": [
    {
      "type": "VariableDeclarator",
      "id": {
        "type": "Identifier",
        "name": "x",
        "start": 4,
        "end": 5
      },
      "init": null,
      "start": 4,
      "end": 5
    },
    {
      "type": "VariableDeclarator",
      "id": {
        "type": "Identifier",
        "name": "y",
        "start": 7,
        "end": 8
      },
      "init": {
        "type": "Literal",
        "value": 1.0,
        "start": 11,
        "end": 12
      },
      "start": 7,
      "end": 12
    }
  ],
  "kind": "var",
  "start": 0,
  "end": 13
}
